--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
                         <ul><br>
                             <li><u><a href="https://www.cyberseek.org/heatmap.html" target="_blank">Using Cybersecurity Supply/Demand Heat Map</a></u></li><br>
                             <li> <u> <a href="https://www.cyberseek.org/pathway.html" target="_blank">CyberSeek:  Cybersecurity Career Pathway</a></u></li><br>
-                            <li> <u> <a href="https://www.cyberseek.org/pathway.html" target="_blank">Infosec:  Cybersecurity Career Pathway</a></u></li><br>
-                            <li> <u> <a href="https://www.cyberseek.org/pathway.html" target="_blank">Bureau of Labor Statistics:  Occupational Outlook Handbook</a></u></li><br>
+                            <li> <u> <a href="https://www.bls.gov/ooh/" target="_blank">Bureau of Labor Statistics:  Occupational Outlook Handbook</a></u></li><br>
                         </ul>
                     </li>
                 </ul>
