--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#topic1">Day 1</a>
+                        <a href="index.html">Day 1</a>
                     </li>
                     <li>
-                        <a href="#"></a>
+                        <a href="index2.html">Day 2</a>
                     </li>
                     <li>
-                        <a href="#"></a>
+                        <a href="index3.html">Day 3</a>
                     </li>
                     <li>
-                        <a href="#"></a>
+                        <a href="index4.html"></a>
                     </li>
 
                 </ul>
