--- a/index.html
+++ b/index.html
@@ -179,6 +179,16 @@
                             <li> <u> <a href="https://www.bls.gov/ooh/" target="_blank">Bureau of Labor Statistics:  Occupational Outlook Handbook</a></u></li><br>
                         </ul>
                     </li>
+                    <li>Group Topic Assignment:
+                        <ul><br>
+                            <li> Team #1 - "Digital Forensics Analyst"</li><br>
+                            <li> Team #2 - "Penetration Tester"</li><br>
+                            <li> Team #3 - " "</li><br>
+                            <li> Team #4 - " "</li><br>
+                            <li> Team #5 - "Information Security Analyst"</li><br>
+                            <li> Team #6 - "Cryptoanalyst"</li>
+                        </ul>
+                    </li>
                 </ul>
             </h3>
             </p>
