--- a/index2.html
+++ b/index2.html
@@ -103,6 +103,7 @@
                             <li><u> <a href="https://www.identityforce.com/blog/2019-data-breaches" target="_blank">2019 Data Breaches - The Worst So  Far</a></u></li><br>
                             <li><u> <a href="https://www.metacompliance.com/blog/5-examples-of-security-breaches-in-2018/" target="_blank">5 Examples of Security Breaches in 2018</a></u></li><br>
                         </ul>
+                            <li><u> <a href="https://www.gamedesigning.org/gaming/security/" target="_blank">The Future of Video Game Security</a></u></li><br>   
                             <li><u> <a href="https://breachlevelindex.com/" target="_blank">Breach Level Index</a></u></li><br>        
                     </ul>
                 </ul>
