--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                         <ul><br>
                             <li> Team #1 - "Digital Forensics Analyst"</li><br>
                             <li> Team #2 - "Penetration Tester"</li><br>
-                            <li> Team #3 - " "</li><br>
+                            <li> Team #3 - "Cryptoanalyst"</li><br>
                             <li> Team #4 - " "</li><br>
                             <li> Team #5 - "Information Security Analyst"</li><br>
-                            <li> Team #6 - "Cryptoanalyst"</li>
+                            <li> Team #6 - "Chief Information Security Officer (CISO)"</li>
                         </ul>
                     </li>
                 </ul>
