--- a/index2.html
+++ b/index2.html
@@ -123,7 +123,7 @@
 
              <h3> <b>Clifford Stokes, Jr. CISSP, CISA, FCCM</b>
                 <ul><br>
-                    <li>Chief Information Officer</li><br>
+                    <li>Chief Information Security Officer (CISO)</li><br>
                     <li>Florida A&M University</li><br>
                     <li>Topic:  "Cybersecurity Careers and Certifications"</li>
                 </ul>
