--- a/index2.html
+++ b/index2.html
@@ -52,7 +52,7 @@
                         <a href="index3.html">Day 3</a>
                     </li>
                     <li>
-                        <a href="index4.html"></a>
+                        <a href="index4.html">Day 4</a>
                     </li>
 
                 </ul>
