--- a/index2.html
+++ b/index2.html
@@ -125,7 +125,12 @@
                 <ul><br>
                     <li>Chief Information Security Officer (CISO)</li><br>
                     <li>Florida A&M University</li><br>
-                    <li>Topic:  "Cybersecurity Careers and Certifications"</li>
+                    <li>Topic:  "Cybersecurity Careers and Certifications"</li><br>
+                    <li>Resources:  <br>
+                    <ul>
+                        <li><u><a href="it-cerfication-roadmap-front.jpg" target="_blank">Certification Roadmap</a></u></li>
+                    </ul>
+                    </li>
                 </ul>
             </h3>
             
