--- a/index2.html
+++ b/index2.html
@@ -128,7 +128,8 @@
                     <li>Topic:  "Cybersecurity Careers and Certifications"</li><br>
                     <li>Resources:  <br>
                     <ul>
-                        <li><u><a href="it-certification-roadmap-front.jpg" target="_blank">Certification Roadmap</a></u></li>
+                        <li><u><a href="it-certification-roadmap-front.jpg" target="_blank">Certification Roadmap</a></u></li><br>
+                        <li><u><a href="NICE_Cybersecurity_CareerDescriptions.xlsx" target="_blank">NICE Cybersecurity Career Descriptions</a></u></li>
                     </ul>
                     </li>
                 </ul>
