--- a/index4.html
+++ b/index4.html
@@ -89,6 +89,7 @@
                 <ul><br>
                     <li>Gerald Tookes Aerial Productions, LLC</li><br>
                     <li>Topic:  "Drones and Security"</li>
+                    <li> <u> <a href="https://urldefense.proofpoint.com/v2/url?u=https-3A__vimeo.com_348373170&d=DwICAg&c=HPMtquzZjKY31rtkyGRFnQ&r=pYZoU7O4fdhQ4ekD1SUnbrZsuiRRhhbNUix5ww41vXA&m=POlEQnw9p0oOfjdPsCkELn7OLJyVAhnQoQRVJJRkjoU&s=As5vflVwf6hdt_rMiQJQwS40coVinH-B8qspYJziKVk&e=" target="_blank">Drone Demonstration by Gerald Tookes</a></u>
                 </ul>
             </h3>
             
@@ -104,17 +105,16 @@
             <h2 class="featurette-heading">Cybersecurity Careers Group Assignment
             </h2>
 
-            <p class="lead">In these activities you will research the real and imaginary world of Cybersecurity. You will learn to create powerful passwords and become aware of real-world hacks.
-            
-             <h3> <b>Activities:</b>
+            <p class="lead">
+             <h3> <b>Final Presentations:</b>
                 <ul><br>
-                    <li>Project Description: <u> <a href="CyberSecurityCareerProject.pdf" target="_blank">"Careers in Cybersecurity"</a></u>
+                    <li><b>Project Description:</b> <u> <a href="CyberSecurityCareerProject.pdf" target="_blank">"Careers in Cybersecurity"</a></u>
                         <ul><br>
                             <li>Due:  Thursday, July 18</li><br>
                         </ul>
                     </li>
   
-                    <li>Group Topic Assignment:
+                    <li><b>Group Topic Assignment:</b>
                         <ul><br>
                             <li> Team #1 - "Digital Forensics Analyst"</li><br>
                             <li> Team #2 - "Penetration Tester"</li><br>
