--- a/index4.html
+++ b/index4.html
@@ -88,7 +88,7 @@
              <h3> <b>Gerald Tookes</b>
                 <ul><br>
                     <li>Gerald Tookes Aerial Productions, LLC</li><br>
-                    <li>Topic:  "Drones and Security"</li>
+                    <li>Topic:  "Drones and Security"</li><br>
                     <li> <u> <a href="https://urldefense.proofpoint.com/v2/url?u=https-3A__vimeo.com_348373170&d=DwICAg&c=HPMtquzZjKY31rtkyGRFnQ&r=pYZoU7O4fdhQ4ekD1SUnbrZsuiRRhhbNUix5ww41vXA&m=POlEQnw9p0oOfjdPsCkELn7OLJyVAhnQoQRVJJRkjoU&s=As5vflVwf6hdt_rMiQJQwS40coVinH-B8qspYJziKVk&e=" target="_blank">Drone Demonstration by Gerald Tookes</a></u>
                 </ul>
             </h3>
